tests/sumo/extended/vaporizer/errors/id_missing/errors.sumo
Error: Attribute 'id' is missing in definition of a vaporizer.
Quitting (on error).
